--- a/first-jsf-app/src/main/webapp/product.xhtml
+++ b/first-jsf-app/src/main/webapp/product.xhtml
@@ -17,7 +17,7 @@
 </h:head>
 
 <h:body>
-
+    <f:event listener="#{productController.preloadData}" type="preRenderView"/>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">ToDo</a>
 
@@ -62,7 +62,7 @@
                         </pp:column>
                         <pp:column>
                             <f:facet name="header">Description</f:facet>
-                            #{product.desc}
+                            #{product.description}
                         </pp:column>
                         <pp:column>
                             <f:facet name="header">Price</f:facet>
