--- a/first-jsf-app/src/main/webapp/product_form.xhtml
+++ b/first-jsf-app/src/main/webapp/product_form.xhtml
@@ -45,7 +45,7 @@
                     <div class="form-group">
                         <h:outputLabel>Description</h:outputLabel>
                         <h:inputText styleClass="form-control" id="description"
-                                     value="#{productController.product.desc}" />
+                                     value="#{productController.product.description}" />
                     </div>
                     <div class="form-group">
                         <h:outputLabel>Price</h:outputLabel>
